<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/inivtado"
    tools:context=".Login_Invitado">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="210dp"
        android:layout_height="205dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen_a_care" />

    <EditText
        android:id="@+id/editTextCorreoInvitado"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/correo_anahuac"
        android:textColorHint="@color/anahuac_orange"
        android:background="@drawable/text_edits_forms"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextContraInvitado"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contra_anahuac"
        android:textColorHint="@color/anahuac_orange"
        android:background="@drawable/text_edits_forms"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreoInvitado"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_Iniciar_S2"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/buttons_form"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraInvitado"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCancelar2"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/grey_buttons_form"
        android:onClick="CancelLogin"
        android:text="@string/CancelarButton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Iniciar_S2"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraInvitado"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="148dp"
        android:layout_height="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/sin_cuenta"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Registrarse"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/Registrarse"
        android:textSize="16sp"
        android:textColor="@color/anahuac_orange"
        android:onClick="RegistrarInvitado"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</android.support.constraint.ConstraintLayout>