<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoA_Care">

    <FrameLayout
        android:id="@+id/frameLayoutVulnerabilidad"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:background="@color/green"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" >

        <TextView
            android:id="@+id/txtResultadoVulnerabilidad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/noVulnerable"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutVulnerabilidad"
        tools:layout_editor_absoluteX="43dp">

        <TextView
            android:id="@+id/txtUserResultado"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="25dp"
            android:text="@string/userPrueba"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtRolResultado"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="115dp"
            android:text="@string/userRol"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="205dp"
            android:text="@string/fecha"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"/>
    </FrameLayout>

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:text="@string/inicio"
        android:textColor="@color/white"
        android:background="@drawable/buttons_form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>