<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/cuenta_anahuac_label"
    tools:context=".InicioSesionAnahuac">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="210dp"
        android:layout_height="205dp"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen_a_care" />

    <EditText
        android:id="@+id/txtCorreoAnahuac"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:hint="@string/correo_anahuac"
        android:textColorHint="@color/anahuac_orange"
        android:inputType="textEmailAddress"
        android:background="@drawable/text_edits_forms"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/txtPasswordAnahuac"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:hint="@string/contra_anahuac"
        android:textColorHint="@color/anahuac_orange"
        android:inputType="textPassword"
        android:background="@drawable/text_edits_forms"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoAnahuac"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnIniciarS_1"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/buttons_form"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordAnahuac" />

    <Button
        android:id="@+id/btnCancelar1"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/grey_buttons_form"
        android:onClick="RegresarMain"
        android:text="@string/CancelarButton"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnIniciarS_1"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordAnahuac" />

</android.support.constraint.ConstraintLayout>