<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pregunta1">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="305dp"
        android:layout_height="125dp"
        android:text="@string/preguntaUno"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="126dp"
        android:layout_height="108dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen_a_care" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="40dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:text="1."
        android:textColor="#E88E72"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="59dp"
        android:layout_height="37dp"
        android:buttonTint="#E88E72"
        android:text="Si"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="59dp"
        android:layout_height="41dp"
        android:buttonTint="#E88E72"
        android:text="No"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/buttons_form"
        android:onClick="Siguiente1"
        android:text="@string/siguiente"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/grey_buttons_form"
        android:onClick="Anterior1"
        android:text="@string/anterior"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>